Revision history for Perl extension Module::Build.

0.4206 - 

  [BUG FIXES]

  - Formally declare 5.8 dependency [Karen Etheridge]

  [ENHANCEMENTS]

  - Enable release and author tests during disttest [Leon Timmermans, Alberto Simões]

0.4205 - Sun Feb  9 17:51:22 CET 2014

  [BUG FIXES]

  - FIX license code regression for artistic license [Roy Ivy III, Leon Timmermans]

  - Don't swallow ExtUtils::CBuilder loading errors [Matthew Horsfall, Leon Timmermans]
  
  - Handle testing on cross-compile builds [Brian Fraser]

  - Protect against platforms without getpw{nam,uid} [Brian Fraser]

0.4204 - Fri Jan 10 00:29:31 CET 2014

  [BUG FIXES]

  - Map conflicts back to runtime [Leon Timmermans]

  - Use mod2fname whenever it's available [Leon Timmermans, Brian Fraser]

  - Accept custom entries in meta_merge 1.4

0.4203 - Wed Nov 27 19:09:05 CET 2013

  [BUG FIXES]

  - Map recommends back to runtime recommends [Leon Timmermans]

  - Map restrictive license to restricted in meta 2.0 [Leon Timmermans]

0.4202 - Tue Nov 19 12:48:19 CET 2013

  [BUG FIXES]

  - Don't merge prereqs from meta to mymeta [Leon Timmermans]

0.4201 - Mon Nov 18 23:23:25 CET 2013

  [BUG FIXES]

  - Prefer META.json over META.yml [Leon Timmermans]

0.4200 - Tue Nov 12 12:39:25 CET 2013

  - Released 0.40_11 as 0.4200

0.40_11 - Wed Nov  6 12:46:59 CET 2013

  [BUG FIXES]

  - Do not set provides in metadata if no_index is set [Leon Timmermans]

0.40_10 - Tue Nov  5 12:11:37 CET 2013

  [BUG FIXES]

  - Lowercase license in fallback logic [Leon Timmermans]

0.40_09 - Tue Nov  5 00:13:11 CET 2013

  [ENHANCEMENTS]

  - Converted to using Meta 2.0

0.4008 - Mon Nov  4 23:10:54 CET 2013

  [BUG FIXES]

  - Fix test failing on ancient perls <= 5.8.1 [Peter Rabbitson]

  - Do not set default switches in Test::Harness; not even -w [Leon Timmermans]

  [DOCUMENTATION]

  - Fix a couple more broken links to CPAN::META::Spec that should
    have been CPAN::Meta::Spec. [Reported by Mike Doherty]
